2025-09-10T00:49:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17599647412 # 762
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-10
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 917 1396 / 930 1409
* notice: next accum: outdated-unq outdated-all / unq all: 919 1398 / 931 1410
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-26] / [2025-09-09]

2025-09-09T00:51:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17568314195 # 761
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-09
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 917 1396 / 929 1408
* notice: next accum: outdated-unq outdated-all / unq all: 917 1396 / 930 1409
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-26 2025-09-08]

2025-09-08T00:53:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17536427926 # 760
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-08
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 916 1395 / 928 1407
* notice: next accum: outdated-unq outdated-all / unq all: 917 1396 / 929 1408
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-08-24] / [2025-09-07]

2025-09-07T00:54:56Z: