@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-10T00:49:52Z",
-  "count_outdated" : 1398,
-  "uniques_outdated" : 919,
+  "timestamp" : "2025-09-11T00:50:55Z",
+  "count_outdated" : 1399,
+  "uniques_outdated" : 920,
   "count" : 1410,
   "uniques" : 931,
   "clones" : [
-    {
-      "timestamp": "2025-08-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-08-29T00:00:00Z",
       "count": 1,
