@@ -1,12 +1,7 @@
 {
-  "count": 12,
+  "count": 11,
   "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2025-08-28T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-08-29T00:00:00Z",
       "count": 1,
