@@ -1,3 +1,12 @@
+2025-09-11T00:50:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17630681797 # 763
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-11
+* notice: last 14d: unq all: 3 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 919 1398 / 931 1410
+* notice: next accum: outdated-unq outdated-all / unq all: 920 1399 / 931 1410
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-08-28] / []
+
 2025-09-10T00:49:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17599647412 # 762
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-10
